--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -484,13 +484,13 @@ es/ent.h : $(srcdir)/../esidl/es/ent.h
 	cp $? es
 
 @ES_TRUE@%.h %.ent : %.idl
-@ES_TRUE@	esidl -isystem $(srcdir) -include es/object.idl -ent $<
+@ES_TRUE@	esidl -isystem $(srcdir) -include es/object.idl -ent -namespace es $<
 
 @ES_TRUE@es/object.h es/object.ent : es/object.idl
 @ES_TRUE@	esidl -isystem $(srcdir) -ent $<
 
 @ES_FALSE@%.h %.ent : %.idl
-@ES_FALSE@	PATH=../esidl:$(PATH) ../esidl/esidl -isystem $(srcdir) -include es/object.idl -ent $<
+@ES_FALSE@	PATH=../esidl:$(PATH) ../esidl/esidl -isystem $(srcdir) -include es/object.idl -ent -namespace es $<
 
 @ES_FALSE@es/object.h es/object.ent : es/object.idl
 @ES_FALSE@	PATH=../esidl:$(PATH) ../esidl/esidl -isystem $(srcdir) -ent $<
